[BattOr] Retry battor_agent commands when they fail.

Many battor_agent failures on the waterfall could be solved by just
retrying the command (e.g., StartTracing). Previously, the battor_agent
retried reads and a select few BattOr control messages when they failed
(e.g., INIT). This was incomplete, as there were many errors that did
not result in retried BattOr control messages.

This CL replaces this incomplete per-control-message retry logic with
retry logic for entire battor_agent commands. This will make the
battor_agent robust to intermittent failures of any BattOr control
message.

This required fixing the battor_agent overuse of the ambiguous "Unexpected Message" error. It also required replacing the timeout logic.

BUG=699581

Review-Url: https://codereview.chromium.org/2826913002
Cr-Commit-Position: refs/heads/master@{#472724}