tools/battor_agent/battor_connection_impl.cc
@@ -81,6 +81,8 @@ BattOrConnectionImpl::~BattOrConnectionImpl() {}
 
 void BattOrConnectionImpl::Open() {
   if (io_handler_) {
+    // Opening new connection so flush serial data from old connection.
+    Flush();
     OnOpened(true);
     return;
   }
